--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cancel">取消</string>
     <string name="confirm">确定</string>
     <string name="tips">提示</string>
+    <string name="header">学习</string>
 </resources>
