--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="confirm">确定</string>
     <string name="tips">提示</string>
     <string name="header">学习</string>
+    <string name="loading">加载中...</string>
 </resources>
