网路请求添加成功，准备Rxjava

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="confirm">确定</string>
     <string name="tips">提示</string>
     <string name="header">学习</string>
+    <string name="header_rxjava">学习RxJava</string>
     <string name="loading">加载中...</string>
 </resources>
