--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="header_rxjava_binding">学习RxJavaBinding</string>
     <string name="loading">加载中...</string>
     <string name="no_annotation">未找到注释</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
