--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">hello: %1$s</string>
+    <string name="title_activity_jet_pack_view_model">JetPackViewModelActivity</string>
 </resources>
