--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">hello: %1$s</string>
     <string name="title_activity_jet_pack_view_model">JetPackViewModelActivity</string>
+    <string name="title_activity_jet_pack_room">JetPackRoomActivity</string>
 </resources>
