--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="text_web_ceo">WEB ANALYTICS</string>
     <string name="text_web_dev">WEB DEVELOPER</string>
     <string name="text_e_commerce">e-Commerce</string>
+    <string name="openDraw">open</string>
+    <string name="closeDraw">close</string>
 </resources>
